<?xml version="1.0"?>
<package format="2">
  <name>acc_logic_ros</name>
  <version>0.1.0</version>
  <description>The acc_logic_ros package</description>
  <maintainer email="kate.brighteyes@gmail.com">kate</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/katebrighteyes</url> 
  <url type="website">https://github.com/katebrighteyes/acc_logic_ros</url> 
  <author email="kate.brighteyes@gmail.com">kate</author> 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <export>
  </export>
</package>
